[gd_scene load_steps=16 format=3 uid="uid://b3ulm1ty0a5ar"]

[ext_resource type="Texture2D" uid="uid://10mgmjx7fwya" path="res://Zun_bg.png" id="1_7atfj"]
[ext_resource type="PackedScene" uid="uid://dxnw2d4wwdegc" path="res://vfx/atmosphere.tscn" id="2_iygbd"]
[ext_resource type="Texture2D" uid="uid://dn7lvslkn2b43" path="res://UI/fightUI.png" id="3_alkse"]
[ext_resource type="FontFile" uid="uid://dbsxp2y5aoq5q" path="res://carolingia.ttf" id="4_ceyom"]
[ext_resource type="Texture2D" uid="uid://jhd7rid3c1c1" path="res://actions/actiontexture/moveIcon.png" id="5_w2k3g"]
[ext_resource type="Script" uid="uid://conijhbkctdj2" path="res://lvl/moveExplo.gd" id="6_tehx7"]
[ext_resource type="FontFile" uid="uid://dnslgqwusbs67" path="res://UI/Euphorigenic.otf" id="7_y710q"]
[ext_resource type="Script" uid="uid://devdej4xpva2i" path="res://UI/camera_2d.gd" id="8_lrql6"]
[ext_resource type="Script" uid="uid://tq0nr5tg2b3k" path="res://lvl/positionexplo.gd" id="9_8vlpw"]
[ext_resource type="Script" uid="uid://km54mxly4gk4" path="res://lvl/exploration_manager.gd" id="10_ypb2a"]
[ext_resource type="PackedScene" uid="uid://d34uxf8noo7ps" path="res://lvl/combat3/door3.tscn" id="11_o03nt"]
[ext_resource type="PackedScene" uid="uid://dq282vipchnbq" path="res://characters/chara_explo.tscn" id="11_x3trt"]
[ext_resource type="Texture2D" uid="uid://5xrrcl7rnx6w" path="res://Enviro/door.png" id="13_dwuvv"]
[ext_resource type="Texture2D" uid="uid://djit2m4icvw0k" path="res://Enviro/kairn.png" id="14_jitre"]
[ext_resource type="Script" uid="uid://cvdsxgbtufa4g" path="res://lvl/interactible.gd" id="15_cl387"]

[node name="CombatInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ZunBg" type="Sprite2D" parent="."]
modulate = Color(1.4, 0.51168, 0.280094, 1)
position = Vector2(961, 402)
texture = ExtResource("1_7atfj")

[node name="atmosphere" parent="." instance=ExtResource("2_iygbd")]
z_index = 15
position = Vector2(2, 352)

[node name="FightUi" type="Sprite2D" parent="."]
position = Vector2(960, 545)
texture = ExtResource("3_alkse")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 974.0
offset_right = 1265.0
offset_bottom = 975.0
color = Color(0.501961, 0.407843, 0.207843, 1)

[node name="moveButton" type="Button" parent="."]
custom_minimum_size = Vector2(90, 90)
layout_mode = 2
offset_left = 917.0
offset_top = 854.0
offset_right = 1007.0
offset_bottom = 954.0
size_flags_stretch_ratio = 0.0
theme_override_fonts/font = ExtResource("4_ceyom")
theme_override_font_sizes/font_size = 40
icon = ExtResource("5_w2k3g")
flat = true
icon_alignment = 1
expand_icon = true
script = ExtResource("6_tehx7")

[node name="cooldownA" type="Label" parent="moveButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="LabelAction" type="Label" parent="."]
layout_mode = 0
offset_left = 681.0
offset_top = 982.0
offset_right = 1260.0
offset_bottom = 1066.0
theme_override_fonts/font = ExtResource("7_y710q")
theme_override_font_sizes/font_size = 25
text = "Move"
horizontal_alignment = 1
autowrap_mode = 3

[node name="TurnOrderPanel" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 28.0
offset_right = 1921.0
offset_bottom = 93.0
mouse_filter = 2
alignment = 1

[node name="Charaname" type="Label" parent="."]
layout_mode = 0
offset_left = 204.0
offset_top = 821.0
offset_right = 848.0
offset_bottom = 901.0
theme_override_font_sizes/font_size = 40
text = "Hero Name"

[node name="contexte" type="Label" parent="."]
layout_mode = 0
offset_left = 1503.0
offset_top = 846.0
offset_right = 1813.0
offset_bottom = 1008.0
theme_override_font_sizes/font_size = 40
text = "ce qu'il se passe"
autowrap_mode = 3

[node name="charaPortrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 756.0
offset_right = 183.0
offset_bottom = 872.0

[node name="ResultScreen" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1000.0
theme_override_fonts/font = ExtResource("4_ceyom")
theme_override_font_sizes/font_size = 450
text = "Victoire !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)
ignore_rotation = false
script = ExtResource("8_lrql6")

[node name="HeroPosition" type="Node2D" parent="."]
z_index = 1
position = Vector2(568, 642)

[node name="position1" type="Node2D" parent="HeroPosition"]
z_index = 1
position = Vector2(-22, 1)
script = ExtResource("9_8vlpw")

[node name="Button" type="Button" parent="HeroPosition/position1"]
z_index = 10
y_sort_enabled = true
offset_left = -82.0
offset_top = -522.0
offset_right = 67.0
flat = true

[node name="position2" type="Node2D" parent="HeroPosition"]
z_index = 1
position = Vector2(132, 24)
script = ExtResource("9_8vlpw")

[node name="Button" type="Button" parent="HeroPosition/position2"]
z_index = 14
z_as_relative = false
y_sort_enabled = true
offset_left = -82.0
offset_top = -525.0
offset_right = 67.0
flat = true

[node name="position3" type="Node2D" parent="HeroPosition"]
z_index = 1
position = Vector2(298, 2)
script = ExtResource("9_8vlpw")

[node name="Button" type="Button" parent="HeroPosition/position3"]
z_index = 10
y_sort_enabled = true
offset_left = -82.0
offset_top = -505.0
offset_right = 67.0
flat = true

[node name="position4" type="Node2D" parent="HeroPosition"]
z_index = 1
position = Vector2(479, 24)
script = ExtResource("9_8vlpw")

[node name="Button" type="Button" parent="HeroPosition/position4"]
z_index = 10
y_sort_enabled = true
offset_left = -82.0
offset_top = -539.0
offset_right = 67.0
flat = true

[node name="ExplorationManager" type="Node2D" parent="."]
script = ExtResource("10_ypb2a")
chara_explo_scene = ExtResource("11_x3trt")
door_scene = ExtResource("11_o03nt")

[node name="Button" type="Button" parent="ExplorationManager"]
z_index = 10
offset_left = 1323.0
offset_top = 62.0
offset_right = 1698.0
offset_bottom = 650.0
flat = true
expand_icon = true

[node name="Doortext" type="TextureRect" parent="ExplorationManager/Button"]
self_modulate = Color(1, 0.685968, 0.502386, 1)
layout_mode = 0
offset_top = 6.0
offset_right = 385.0
offset_bottom = 543.0
texture = ExtResource("13_dwuvv")
expand_mode = 1

[node name="Kairn" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(283, 496)
scale = Vector2(0.6, 0.6)
texture = ExtResource("14_jitre")
script = ExtResource("15_cl387")

[node name="Button" type="Button" parent="Kairn"]
offset_left = -170.0
offset_top = -179.0
offset_right = 201.0
offset_bottom = 165.0
flat = true

[connection signal="button_down" from="moveButton" to="ExplorationManager" method="_on_move_button_button_down"]
[connection signal="mouse_entered" from="moveButton" to="moveButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="moveButton" to="moveButton" method="_on_mouse_exited"]
[connection signal="button_down" from="HeroPosition/position1/Button" to="HeroPosition/position1" method="_on_button_button_down"]
[connection signal="button_down" from="HeroPosition/position2/Button" to="HeroPosition/position2" method="_on_button_button_down"]
[connection signal="button_down" from="HeroPosition/position3/Button" to="HeroPosition/position3" method="_on_button_button_down"]
[connection signal="button_down" from="HeroPosition/position4/Button" to="HeroPosition/position4" method="_on_button_button_down"]
[connection signal="button_down" from="ExplorationManager/Button" to="ExplorationManager" method="_on_button_button_down"]
[connection signal="mouse_entered" from="ExplorationManager/Button" to="ExplorationManager" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="ExplorationManager/Button" to="ExplorationManager" method="_on_button_mouse_exited"]
[connection signal="button_down" from="Kairn/Button" to="Kairn" method="_on_button_button_down"]
[connection signal="mouse_entered" from="Kairn/Button" to="Kairn" method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Kairn/Button" to="Kairn" method="_on_button_mouse_exited"]
